Changed the short values for NumericalIntegrator into an Enum called NumericalIntegratorType. The constructors of all DifferentialEquation types have been adapted accordingly. Added test code for an ordinary differential equation, and for a stiff set of ODEs. Repaired the Gill numerical integration method (formula wrongly implemented). Added test code for the simulators using multi-threaded testing. An extended version of ConcurrentUnit for multi-threaded tests has been added to the test code to be able to test running simulators. See https://github.com/jhalterman/concurrentunit for more info. The original pom has not been included because it lacked several tests that we want to include here. Very extensive unit test for random number generators (bins, test on bit level, all drawing methods). Repaired the DX120 Random Number Generator (average draw was 0.25 instead of 0.5). Repaired the nextInt(min, max) function in RandomNumberGenerator.